Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
             <div class="mt-6 flex justify-center space-x-4">
                 <!-- Botón de GitHub con el enlace proporcionado -->
-                <a href="https://github.com/DanielAcostaM" target="_blank" class="btn-primary px-6 py-3 rounded-xl font-bold transition hover:scale-105">
+                <a href="https://github.com/acostadaniel12" target="_blank" class="btn-primary px-6 py-3 rounded-xl font-bold transition hover:scale-105">
                     Mi GitHub
                 </a>
                 <!-- Botón de CV: Se utiliza el nombre del archivo subido y el atributo 'download' para forzar la descarga -->
