Fix typo in professional summary paragraph

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Resumen Profesional
             </h2>
             <p class="text-lg leading-relaxed text-gray-300">
-                Scrum Master con experiencia en proyectos tecnológicos, incluyendo el gestión, análisis, migración e implementación de un sistema de créditos de vivienda, mantenimiento de un ERP de gestión y administración de contratos de agua y la gestión, análisis e implementación de un sistema intermediario entre NetSuite y bancos. Enfocado en la coordinación ágil de equipos, la optimización de procesos y la entrega de soluciones eficientes.
+                Scrum Master con experiencia en proyectos tecnológicos, incluyendo la gestión, análisis, migración e implementación de un sistema de créditos de vivienda, mantenimiento de un ERP de gestión y administración de contratos de agua y la gestión, análisis e implementación de un sistema intermediario entre NetSuite y bancos. Enfocado en la coordinación ágil de equipos, la optimización de procesos y la entrega de soluciones eficientes.
             </p>
         </section>
 
